# avs_hse

./: CMakeLists.txt  Makefile  README.md  bush.c  bush.cpp  bush.h  bush.py  container.c  container.cpp  container.h  container.py  data.h  extdata.h  extender.py  flower.c  flower.cpp  flower.h  flower.py  input.c  inrnd.c  main.c  main.cpp  main.py  output.c  output.lst  plant.c  plant.cpp  plant.h  plant.py  quotient.asm  quotient.c  random.cpp  randomInput.py  readStr.py  shooter.h  task  tree.c  tree.cpp  tree.h  tree.py
TestsIn/: test3.txt
TestsOut/Out Random/: out01_rnd.txt  out02_rnd.txt  (+6 more)
avs_threads/: CMakeLists.txt  main.cpp  random.h  shooter.cpp
out_tests/: out_rand1.txt  out_rand11.txt  out_rand2.txt  out_rand22.txt  out_rand3.txt  out_rand33.txt  out_rand4.txt  out_rand44.txt  out_test1.txt  out_test11.txt  out_test2.txt  out_test22.txt  out_test3.txt  out_test33.txt  out_test4.txt  out_test44.txt
random_results/: out_random1.txt  out_random1_sorted.txt  out_random2.txt  out_random2_sorted.txt  out_random3.txt  out_random3_sorted.txt  out_random4.txt  out_random4_sorted.txt
tests/: test1.txt  test2.txt  test3.txt  test4.txt
testsOut/: out1.txt  out1_rnd.txt  out2.txt  out2_rnd.txt  out3.txt  out3_rnd.txt  out4.txt  out4_rnd.txt  out5.txt  out5_rnd.txt  out6.txt  out6_rnd.txt  out7.txt  out7_rnd.txt  out8.txt  out_rnd.txt
tests_results/: out_random4.txt  out_test1.txt  out_test1_sorted.txt  out_test2.txt  out_test2_sorted.txt  out_test3.txt  out_test3_sorted.txt  out_test4.txt  out_test4_sorted.txt  out_test5.txt  out_test5_sorted.txt
(+8 files in other folders)
